--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace
-spring.datasource.username=myUser
-spring.datasource.password=123
+spring.datasource.username=users
+spring.datasource.password=Sofia_280508!
 
 logging.level.root = INFO
 logging.level.ru.skypro.homework = DEBUG
